--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#020617" />
     <meta name="description" content="نکسورا - پیشرو در ارائه راهکارهای هوش مصنوعی" />
     <title>Nexora AI Studio | نکسورا</title>
+
+    <link rel="icon" type="image/png" href="/nexoraaaaaaiiiiiiigeminiiiiii/assets/favicon-CLstQfzQ.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
